# numpyeigen

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  environment.yml  numpyeigen.files  numpyeigen.includes  numpyeigenTools.cmake  pybind11_cmake_example.files  pybind11_cmake_example.includes  pybind22Tools.cmake  requirements.txt
.github/workflows/: cmake.yml
cmake/: FindLIBIGL.cmake  numpyeigen.cmake  numpyeigenDependencies.cmake  numpyeigenDownloadExternal.cmake  numpyeigenTools.cmake
src/: CMakeLists.txt  binding_dsl.py  binding_typedefs.cpp  binding_typedefs.h  binding_utils.h  codegen.py  codegen4.txt  codegen_function.py  codegen_module.py  crazy_binding1.h  crazy_binding2.h  crazy_binding3.h  crazy_binding_4.h  crazy_binding_5.h  dense_array.h  eigen_typedefs.h  example_binding.cpp  function_parser.py  matrix_add.cpp  matrix_add.out.cpp  npe.h  npe_dense_array.h  npe_dtype.h  npe_sparse_array.h  npe_typedefs.cpp  npe_typedefs.h  npe_utils.h  numpyeigen_typedefs.cpp  numpyeigen_typedefs.h  numpyeigen_utils.h  sparse_array.h  test_binding.cpp  test_binding.igl  test_cpp.cpp
src/old_binding_experiment/: benchmark.py  benchmark_overload.cpp  codegen.py  crazy_binding_4.h  crazy_binding_5.h  eigen_typedefs.h  example_binding.cpp
tests/: .gitignore  CMakeLists.txt  binding_example.cpp  bool_arg.cpp  default_arg.cpp  default_matches.cpp  dense_like.cpp  docstring.cpp  dtype.cpp  environment.yml  function_1d.cpp  long_and_int.cpp  matrix_add.cpp  mutate_matrix.cpp  mutate_sparse_matrix.cpp  no_numpy.cpp  profiling.py  pybind11_helper_module.cpp  redirect_io.cpp  sparse_like.cpp  sparse_matrix_add.cpp  sparse_matrix_passthru.cpp  sparse_test_binding.cpp  string_expr_docstring.cpp  test_1d_arrays.py  test_default_arguments.py  test_default_matches.py  test_dense_binding.py  test_docstring.py  test_module.cpp  test_nocopy.py  test_npe_call_interface.py  test_slices.py  test_sparse_binding.py
