cmake_minimum_required(VERSION 3.2)
project(NumpyEigen VERSION 0.1.0)

option(NPE_BUILD_TESTS "Build NumpyEigen tests"                              ON)
option(NPE_WITH_EIGEN  "Use eigen submodule when building NumpyEigen module" ON)

set(NPE_EXTRA_CXX_FLAGS "")

if(NOT MSVC)
  include(CheckCXXCompilerFlag)
  CHECK_CXX_COMPILER_FLAG("-fopenmp" COMPILER_SUPPORT_OPENMP)
  if(COMPILER_SUPPORT_OPENMP)
    option(NPE_OPENMP  "Enable/Disable OpenMP" OFF)
    if(NPE_OPENMP)
      set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-fopenmp")
      message(STATUS "Enabling OpenMP")
    endif()
  endif()

  option(NPE_SSE2        "Enable/Disable SSE2"                                 OFF)
  if(NPE_SSE2)
    set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-msse2")
    message(STATUS "Enabling SSE2 for NumpyEigen modules")
  endif()

  option(NPE_SSE3        "Enable/Disable SSE3"                                 OFF)
  if(NPE_SSE3)
    set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-msse3")
    message(STATUS "Enabling SSE3 for NumpyEigen modules")
  endif()

  option(NPE_SSSE3       "Enable/Disable SSSE2"                                OFF)
  if(NPE_SSSE3)
    set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-mssse3")
    message(STATUS "Enabling SSSE3 for NumpyEigen modules")
  endif()

  option(NPE_SSE4_1      "Enable/Disable SSE4.1"                               OFF)
  if(NPE_SSE4_1)
    set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-msse4.1")
    message(STATUS "Enabling SSE4.1 for NumpyEigen modules")
  endif()

  option(NPE_SSE4_2      "Enable/Disable SSE4.2"                               OFF)
  if (NPE_SSE4_2)
    set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-msse4.2")
    message(STATUS "Enabling SSE4.2 for NumpyEigen modules")
  endif()

  option(NPE_AVX         "Enable/Disable AVX"                                  OFF)
  if(NPE_AVX)
    set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-mavx")
    message(STATUS "Enabling AVX for NumpyEigen modules")
  endif()

  option(NPE_AVX2        "Enable/Disable AVX"                                  OFF)
  if(NPE_AVX2)
    set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-mavx2")
    message(STATUS "Enabling AVX2 for NumpyEigen modules")
  endif()

  option(NPE_AVX512      "Enable/Disable AVX"                                  OFF)
  if(NPE_AVX512)
    set(NPE_EXTRA_CXX_FLAGS ${NPE_EXTRA_CXX_FLAGS} "-mavx512f" "-DEIGEN_ENABLE_AVX512")
    message(STATUS "Enabling AVX512 for NumpyEigen modules")
  endif()
else()
  warning("Windows build of NumpyEigen is alpha and not considered stable")
endif()


add_subdirectory(external/pybind11)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(NPE_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(NPE_SRC_DIR ${NPE_BASE_DIR}/src)
include(numpyeigenTools)

if(${NPE_WITH_EIGEN})
  set(ENV{EIGEN3_ROOT} external/eigen)
  find_package(Eigen3 3.2 REQUIRED)
endif()

if(${NPE_BUILD_TESTS})
  enable_testing()
  add_subdirectory(tests)
endif()
